<resources>
    <string name="app_name">Trueque</string>
    <string name="login_name">Ingrese email</string>
    <string name="login_password">Su password</string>
    <string name="login_password_conf">Confirme su password</string>
    <string name="login_link">Crear nueva cuenta</string>
    <string name="login_linkr">Ya tengo una cuenta. Iniciaré sesión</string>

    <string name="product_name">Articulo: </string>
    <string name="product_description">Descripción: </string>
    <string name="product_owner">Tel. contacto: </string>
    <string name="product_price">Precio: </string>
    <string name="product_img">Url imágen 1: </string>
    <string name="product_tecnic">Url información:</string>

    <string name="product_btn_edit">Editar</string>
    <string name="product_btn_detail">Más información</string>
    <string name="login_btn">Ingresar</string>
    <string name="register_btn">Registrarse</string>
    <string name="update_btn">Actualizar</string>
    <string name="delete_btn">Borar</string>
    <string name="save_btn">Guardar</string>

    <string name="title_edit">Editar</string>
    <string name="title_reg">Registro</string>
    <string name="title_new">Nuevo producto</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="Title_Marker_map">Ubicación de fotografía</string>
    <string name="Show_Ubi">Mostrar Ubicación</string>

    <string name="LoginGoogle">Iniciar sesión con google</string>
    </resources>